...
    // MARK: - Lifecycle
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "НАЛИЧИЕ ЦЕКА"
        tableView.backgroundColor = .BackgroundColor1
        tableView.tableFooterView = UIView()
        tableView.accessibilityIdentifier = "cracklesTableView"
        tableView.register(DefaultCell.self, forCellReuseIdentifier: "crackleCell")
    }

    // MARK: - Table view data source
    override func tableView(_ tableView: UITableView, numberOfRowsInSection section: Int) -> Int {
        return viewModel?.numberOfRowsInSection(forSection: section) ?? 0
    }
...
