...
    // MARK: - Lifecycle
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "МАССА \(viewModel?.item ?? "")"
        tableView.backgroundColor = .BackgroundColor1
        tableView.tableFooterView = UIView()
        tableView.accessibilityIdentifier = "temperaturesTableView"
        tableView.register(DefaultCell.self, forCellReuseIdentifier: "temperatureCell")

        // Get temperatures array for clay
        viewModel?.loadData(completion: { [weak self] in
            DispatchQueue.main.async {
                self?.tableView.reloadData()
            }
...
