...
    // MARK: - Lifecycle
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "ПОДХОДЯЩИЕ ГЛАЗУРИ"
        tableView.backgroundColor = .BackgroundColor1
        tableView.tableFooterView = UIView()
        tableView.accessibilityIdentifier = "glazesTableView"
        tableView.register(DefaultCell.self, forCellReuseIdentifier: "glazesCell")

        // Load data via viewModel
        viewModel?.loadData(completion: { [weak self] in
                DispatchQueue.main.async {
                    self?.tableView.reloadData()
...
